# usos-rpc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  discord-rpc.patch
.github/workflows/: cmake.yml
resources/: config.toml  help.ansi  systemd.ansi  usos-rpc.service  windows.ansi
src/: build_info.hpp.in  config.hpp  exceptions.hpp  files.hpp  logging.cpp  logging.hpp  main.cpp  preinit.hpp  preinit_files.hpp.in  requests.hpp  utilities.hpp  version_info.hpp.in
src/commands/: default.hpp  extract.hpp  info.hpp  parser.hpp  systemd.hpp  windows.hpp
src/icalendar/: calendar.hpp  event.hpp  parser.hpp
